--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "husky": "^8.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "supertest": "^6.3.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+        "jest-extended/all",
+        "jest-sorted"
     ]
-  }
+}
 }
